Update styles to fix overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -59,6 +59,12 @@ body.light-theme {
     box-sizing: border-box;
 }
 
+html,
+body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
